<resources>
    <string name="app_name">Media Shelf</string>

    <string name="label_trending_movies">Trending Movies</string>
    <string name="label_trending_tv">Trending TV</string>
    <string name="label_popular_tv">Popular TV</string>
    <string name="label_popular_movies">Popular Movies</string>
    <string name="label_now_playing_movies">Now Playing Movies</string>
    <string name="label_upcoming_movies">Upcoming Movies</string>
    <string name="btn_more">More</string>
    <string name="btn_homepage">Homepage</string>
    <string name="label_about_movie">About Movie</string>
    <string name="label_similar_movies">Similar Movies</string>
    <string name="label_where_to_watch">Where to Watch</string>
    <string name="label_about_show">About Show</string>
    <string name="label_similar_shows">Similar Shows</string>
    <string name="label_stream">Stream</string>
    <string name="label_rent">Rent</string>
    <string name="label_buy">Buy</string>
    <string name="label_genres">Genres</string>
    <string name="label_cast_and_credits">Cast &amp; Credits</string>
    <string name="label_details">Details</string>
    <string name="label_starring">Starring</string>
    <string name="label_directors">Directors</string>
    <string name="label_released">Released</string>
    <string name="label_duration">Duration</string>
    <string name="label_original_language">Original Language</string>
    <string name="label_content_rating">Content Rating</string>
    <string name="format_minutes">%d min</string>
    <string name="label_first_aired_date">First Aired Date</string>
    <string name="label_number_of_episodes">Number of Episodes</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="search_hint">Search movie or tv show</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_acknowledgements">Acknowledgements</string>
    <string name="label_version">Version %s</string>
    <string name="visit_justwatch">Watch availability data provided by <a href="#">JustWatch</a></string>
    <string name="tmdb_movie_base_url">https://www.themoviedb.org/movie/%d-%s/watch</string>
    <string name="tmdb_tv_show_base_url">https://www.themoviedb.org/tv/%d-%s/watch</string>
    <string name="privacy_policy_link">https://sites.google.com/view/mediashelf/privacy</string>
    <string name="acknowledgements_link">https://sites.google.com/view/mediashelf/acknowledgements</string>
    <string name="btn_try_again">Try Again</string>
    <string name="label_error_occured">An error occurred.</string>
    <string name="not_available_abbreviation">N/A</string>
</resources>